--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,5 +1,9 @@
 ---
-layout: archive
+layout: splash
+permalink:
+header:
+  overlay_image: /assets/images/battle_splash.jpg
+  excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
 ---
 
 {{ content }}
