--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,5 @@
 ---
-layout: splash
-permalink:
-header:
-  overlay_image: /assets/images/battle_splash.jpg
-  excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
+layout: archive
 ---
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
