--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@ header:
   overlay_image: /assets/images/battle_splash.jpg
 ---
 
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts22" }}</h3>
+
 {% for post in paginator.posts %}
   {% include archive-single.html %}
 {% endfor %}
