--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,8 @@
 ---
-layout: splash
-permalink: /
-excerpt: 'Tips, strategies, and recommendations for growth and success in Iron Throne'
-header:
-  overlay_image: /assets/images/battle_splash.jpg
+layout: archive
 ---
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts22" }}</h3>
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}HOME.html</h3>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
